--- a/_posts/2019-03-08-notes-on-i2c.md
+++ b/_posts/2019-03-08-notes-on-i2c.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Notes on I2C"
 date:   2018-12-31 22:22:32 +0530
-permalink: /my-notes-setup/
+permalink: /notes-on-i2c/
 tags: notes
 ---
 
