--- a/_posts/2019-01-10-uses.md
+++ b/_posts/2019-01-10-uses.md
@@ -9,7 +9,7 @@ The following is a list of things I use frequently in my everyday life. Modeled 
 ## Software
 
 - My daily programming workflow uses the [iTerm2](https://iterm2.com/) terminal emulator with zsh/bash and Git. I just use the default color schemes.
-- - I use [Alfred 3](https://alfredapp.com/) app on Mac as launcher. I have it mapped to ⌘+space.  There are a ton of snippets and workflows that provide with shortcuts to apps below.
+- I use [Alfred 3](https://alfredapp.com/) app on Mac as launcher. I have it mapped to ⌘+space.  There are a ton of snippets and workflows that provide with shortcuts to apps below.
 - My most used editors are Vim(terminal or GUI) and [Sublime Text 3](https://www.sublimetext.com/3). I have been using Sublime Text for the past 6 years and in my opinion none of the other graphical editors come close to it. Again I use the default color schemes for both of these. I found that I was spending too much time on deciding what color schemes to use and just decided on keeping the default ones. However I do try to use the Menlo font everywhere.
 - I use RSS to follow personal and tech blogs. I use [Feedbin](https://feedbin.com/) to sync all RSS feeds.  I use [NetNewsWire](https://ranchero.com/netnewswire/) on Mac to read the RSS feed.  I used to use the [Reeder](https://itunes.apple.com/us/app/reeder-4/id1449412357?ls=1&mt=8) app on iPhone to read RSS But now I am trying the [NetNewsWire Testflight](https://ranchero.com/netnewswire/test-ios) program on iPhone. 
 - I am a big fan of [Pinboard](https://pinboard.in). Anything useful I like on web, Twitter and Reddit goes to Pinboard.  I use the [Pinner](https://apps.apple.com/app/pinner-social-bookmarking/id591613202) app on iPhone to access Pinboard bookmarks. I also use [Shiori](https://aki-null.net/shiori/) on Mac to access Pinboard bookmarks fast.
