--- a/_posts/2019-01-10-uses.md
+++ b/_posts/2019-01-10-uses.md
@@ -15,6 +15,7 @@ The following is a list of things I use frequently in my everyday life. Modeled 
 - I am a big fan of [Pinboard](https://pinboard.in). Anything useful I like on web, Twitter and Reddit goes to Pinboard.  I use the [Pinner](https://apps.apple.com/app/pinner-social-bookmarking/id591613202) app on iPhone to access Pinboard bookmarks. I also use [Shiori](https://aki-null.net/shiori/) on Mac to access Pinboard bookmarks fast.
 - Speaking of Reddit I use the [Apollo](https://apps.apple.com/us/app/apollo-for-reddit/id979274575) app on iPhone for browsing Reddit.
 - I use [nvALT](https://brettterpstra.com/projects/nvalt/) and [1Writer](https://apps.apple.com/us/app/1writer/id680469088?ls=1) on iPhone on Mac(see here for my notes setup). I have tried to use Bear and other apps and end up come back to nvALT for its simplicity.
+- I use 1Password for password management. This has been my third year with them and I couldn't be happier.
 - My backup strategy involves using [Arq Backup](https://www.arqbackup.com/) for backing up the home folder on my computer to Bacblaze BC2.
 - Other apps on Mac: Spotify, GitHub Desktop, Steam.
 
