--- a/_posts/2019-01-10-uses.md
+++ b/_posts/2019-01-10-uses.md
@@ -17,7 +17,7 @@ The following is a list of things I use frequently in my everyday life. Modeled 
 - I use [nvALT](https://brettterpstra.com/projects/nvalt/) and [1Writer](https://apps.apple.com/us/app/1writer/id680469088?ls=1) on iPhone on Mac(see here for my notes setup). I have tried to use Bear and other apps and end up come back to nvALT for its simplicity.
 - I use 1Password for password management. This has been my third year with them and I couldn't be happier.
 - My backup strategy involves using [Arq Backup](https://www.arqbackup.com/) for backing up the home folder on my computer to Bacblaze BC2.
-- Other apps on Mac: Spotify, GitHub Desktop, Steam.
+- Other apps on Mac: Spotify, GitHub Desktop, Dash, Marked, Steam.
 
 ## Hardware
 
